--- a/week1/site/index.html
+++ b/week1/site/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="sytle.css">
-	<script src="script.js" defer></script>
+    <script src="script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -34,6 +34,7 @@
 
         <div class="wdw">
             <h2>wat doen we?</h2>
+
             <div class="info">
                 <h3>onderhoud</h3>
                 <img class="symbol" src="./images/lawn-mower.png" alt="">
@@ -106,9 +107,10 @@
     </main>
 
     <footer>
-        <div class="contact">
-            <p class="name"> De Herdt Groen en Boomverzorging</p>
-            <p>straatnaamehier nr</p>
+        <h3> De Herdt Groen en Boomverzorging</h3>
+
+        <div class="gegevens">
+            <p>straatnaam hier nr</p>
             <p>postcode gemeente</p>
             <p>provintie</p>
         </div>
@@ -116,7 +118,6 @@
             <p>neem gerust contact op voor een vrijbleivende oferte of maak een afspraak.</p>
             <p>mail: info@dhbg.be</p>
             <p>tel: +325869414</p>
-            <p>social media: </p>
         </div>
 
     </footer>
