--- a/week1/site/index.html
+++ b/week1/site/index.html
@@ -8,24 +8,26 @@
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="sytle.css">
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>DHBG</title>
 </head>
 <body>
-    <header>
-        <div class="LOGO">
-            <img src="images/Logo.png" width="100vw">
-        </div>
+    <nav class="navbar">
+        <div class="LOGO"><img src="images/Logo.png"></div>
+        <a href="#" class="toggle_button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
 
-        <nav>
+        </a>
+        <div class="navbar_links">
             <ul>
-                <li><a href="">home</a></li>
-                <li><a href="">wat doen we?</a></li>
-                <li><a href="">over ons</a></li>
-                <li><a href="">contact</a></li>
+                <li><a href="#">home</a></li>
+                <li><a href="#">wat doen wij</a></li>
+                <li><a href="#">social</a></li>
+                <li><a href="#">contact</a></li>
             </ul>
-
-        </nav>
-    </header>
+        </div>
+    </nav>
 
     <main>
         <div class="home">
@@ -104,7 +106,7 @@
         <div class="over-ons">
             <h3> bezoek ons zeker op sociaal media</h3>
             <div class="insta">
-            <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/Cno7xOJt2Kb/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);"><div style="padding:16px;">
+            <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/Cno7xOJt2Kb/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15);"><div>
             <a href="https://www.instagram.com/p/Cno7xOJt2Kb/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank"> <div style=" display: flex; flex-direction: row; align-items: center;"> <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div> <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;"> 
             <div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;"></div> 
             <div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"></div></div></div><div style="padding: 19% 0;"></div> 
@@ -148,16 +150,16 @@
     </main>
 
     <footer>
-        <h3> De Herdt Groen en Boomverzorging</h3>
 
         <div class="gegevens">
-            <p>straatnaam hier nr</p>
+        <h3> De Herdt Boom en Groenverzorging</h3>
+            <p>straatnaam + nr</p>
             <p>postcode gemeente</p>
-            <p>provintie</p>
+            <p>provincie</p>
         </div>
-        <h3>contacteer ons:</h3>
 
         <div class="contact">
+            <h3>contacteer ons:</h3>
             <p>mail: <a href="mailto:info@dhbg.be"> info@dhbg.be </a></p>
             <p>tel: <a href="tel:+32 487 74 47 45"> +32 487 74 47 45</a></p>
         </div>
